# veronica

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs  util.rs
data/: test.txt
lib/: Cargo.toml
lib/src/: lib.rs
redis/: Cargo.toml
server/: Cargo.toml
server/src/: lib.rs  main.rs  util.rs
