[package]
name = "veronica-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { version="0.1.0", path = "../lib" }

structopt = "0.3.13"
# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# tokio = {version = "1.0", features = ["full"]}